fix visibility bug

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,6 +22,7 @@
   overflow-y: hidden;
   padding: 0 0.5rem;
   word-wrap: break-word;
+  visibility: "hidden"
 }
 
 .logo {
